syntax = "proto3";

option java_package = "edu.neu.DatastoreService.Acceptor";

service Acceptor {

    rpc getPromise(PrepareRequest) returns (PrepareResponse);

    rpc getAccept(ProposeRequest) returns (ProposeResponse);
}

message PrepareRequest {

    string proposalId = 1;
    string operation = 2;
    string key = 3;
    string value = 4;
}

message PrepareResponse {

    int32 code = 1;
    string message = 2;
}

message ProposeRequest {

    string proposalId = 1;
    string operation = 2;
    string key = 3;
    string value = 4;
}

message ProposeResponse {

    int32 code = 1;
    string message = 2;
}