syntax = "proto3";

option java_package = "edu.neu.DatastoreService";

service Proposer {

    rpc getConsensus(ConsensusRequest) returns (ConsensusResponse);
}

message ConsensusRequest {

    string operation = 1;
    string key = 2;
    string value = 3;
}

message ConsensusResponse {

    int32 code = 1;
    string message = 2;
}